Add background color to slider
Fixes  [Bug] MAYHP-24

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -669,6 +669,7 @@ a.mfhomepage-card:focus {
 
 
 .item {
+	background-color: #162F57;
 	background-position: center center;
 	background-repeat: no-repeat; 
 	background-size: cover;
