--- a/sass/style.scss
+++ b/sass/style.scss
@@ -734,10 +734,17 @@ a.mfhomepage-card:focus {
 	margin: 5px 5px 0 5px;
 
 	.carousel-control {
-		
+		width: 85%;
+		height: auto;
+		bottom: auto;
+		font-size: 1.05em;
+		padding: 15px;
+		top: 0;
 		opacity: 1.0;
-		
-		border-radius: 6px;
+		background-color: $brand-primary;
+		line-height: 1em;
+		border: 1px solid #fff;
+		border-radius: 4px;
 		text-overflow: ellipsis;
 		overflow: hidden;
 		white-space: nowrap;
@@ -759,7 +766,7 @@ a.mfhomepage-card:focus {
 	}
 
 	.carousel-control:hover {
-		background-color: $bg-transparent-hover;
+		background-color: $brand-primary-hover;
 		opacity: 1.0;
 	}
 	
@@ -782,7 +789,7 @@ a.mfhomepage-card:focus {
 	
 	.list-group-item {
 		opacity: 1.0;
-		background-color: $bg-transparent;
+		background-color: $brand-primary;
 		border: 1px solid #fff;
 	
 		&:first-child {
@@ -810,8 +817,8 @@ a.mfhomepage-card:focus {
 	
 	a.list-group-item:hover,
 	a.list-group-item:focus,
-	a.list-group-item:active {
-		background-color: $bg-transparent-hover;
+	a.list-group-item:active  {
+		background-color: $brand-primary-hover;
 	}
 	
 	.list-group-icon {
@@ -876,7 +883,9 @@ a.mfhomepage-card:focus {
 			font-size: 1.2em;
 		}
 		
-		a.list-group-item:hover {
+		a.list-group-item:hover,
+		a.list-group-item:focus,
+		a.list-group-item:active {
 			background-color: $bg-transparent-hover;
 		}
 	
