👌 IMPROVE: Get Homepage Working with Mayflower G4
The bare minimum to squash errors and get Globals loading

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,8 +4,8 @@
  Description:      Mayflower Child Theme to provide custom Bellevue College Homepage
  Author:           Bellevue College Information Technology Services
  Author URI:       http://www.bellevuecollege.edu
- Template:         mayflower
- Version:          2.0.7-#{versionStamp}#
+ Template:         mayflower-g4
+ Version:          3.0.0.1-#{versionStamp}#
  GitHub Theme URI: bellevuecollege/mayflower-homepage
  License:          GNU General Public License v2 or later
  License URI:      http://www.gnu.org/licenses/gpl-2.0.html
