--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@
  Author:           Bellevue College Information Technology Services
  Author URI:       http://www.bellevuecollege.edu
  Template:         mayflower-g4
- Version:          3-#{versionStamp}#
+ Version:          3.0.1-#{versionStamp}#
  GitHub Theme URI: bellevuecollege/mayflower-homepage
  License:          GNU General Public License v2 or later
  License URI:      http://www.gnu.org/licenses/gpl-2.0.html
@@ -640,6 +640,7 @@ a.mfhomepage-card:focus {
 	#homeslider,
 	#home-carousel-featured-full {
 		max-height: 350px;
+		overflow: hidden;
 	}
 
 	.btn-carousel {
